k8s-manifests/wordpress/wordpress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress-namespace
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress  # The service needs to match the label to select the WordPress pods
  ports:
    - protocol: TCP
      port: 80  # Exposing the service on port 80 within the cluster
      targetPort: 80  # he port on the container where WordPress is running
      nodePort: 30080  # The external port on the node where WordPress will be accessible
  type: NodePort  # Using NodePort type to provide external access to the service
